--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -30,3 +30,22 @@ cloudy_card:
       label: Content
     second:
       label: Image
+
+# Homepage
+cloudy_homepage:
+  label: 'Cloudy homepage'
+  category: 'Cloudy'
+  template: templates/layout/cloudy-homepage
+  regions:
+    search:
+      label: 'Search'
+      classes:
+        - search
+    popular:
+      label: 'Popular'
+      classes:
+        - popular
+    terms:
+      label: 'Terms'
+      classes:
+        - terms
