--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - page_manager.page.frontpage
     - search_api_page.search_api_page.search_portland_gov
-    - views.view.audiences_homepage
     - views.view.community_actions
     - views.view.top_searches
     - views.view.topics
@@ -26,29 +25,18 @@ variant_settings:
       views_label: ''
       items_per_page: none
       region: content
-      weight: 0
+      weight: 1
       uuid: 04a3a447-0b77-4341-b848-1c2c08371f02
-      context_mapping: {  }
-    7db4b6fa-473d-4c94-8e13-c397a536c51a:
-      id: 'views_block:audiences_homepage-block_1'
-      label: ''
-      provider: views
-      label_display: '0'
-      views_label: ''
-      items_per_page: none
-      region: content
-      weight: 2
-      uuid: 7db4b6fa-473d-4c94-8e13-c397a536c51a
       context_mapping: {  }
     6a81d56b-108f-452f-aba2-2e297d16af6d:
       id: 'views_block:topics-block_1'
       label: ''
       provider: views
-      label_display: '0'
+      label_display: visible
       views_label: ''
       items_per_page: none
       region: content
-      weight: 1
+      weight: 2
       uuid: 6a81d56b-108f-452f-aba2-2e297d16af6d
       context_mapping: {  }
     5f28bb14-a708-467e-a663-2b3917477d74:
@@ -59,7 +47,7 @@ variant_settings:
       views_label: ''
       items_per_page: none
       region: content
-      weight: -1
+      weight: 0
       uuid: 5f28bb14-a708-467e-a663-2b3917477d74
       context_mapping: {  }
     8fd66517-9a80-4a79-931e-517cbdab21b6:
@@ -68,9 +56,18 @@ variant_settings:
       provider: search_api_page
       label_display: '0'
       region: content
-      weight: -2
+      weight: -1
       uuid: 8fd66517-9a80-4a79-931e-517cbdab21b6
       search_api_page: search_portland_gov
+      context_mapping: {  }
+    7bd5a9d7-a551-45e3-8901-a361e3a5df4f:
+      id: page_title_block
+      label: 'Page title'
+      provider: core
+      label_display: '0'
+      region: content
+      weight: -2
+      uuid: 7bd5a9d7-a551-45e3-8901-a361e3a5df4f
       context_mapping: {  }
   id: panels_variant
   uuid: 90fbbec1-0801-4d59-a49e-9278c74c8fd5
@@ -78,7 +75,7 @@ variant_settings:
   weight: 0
   layout: layout_onecol
   layout_settings: {  }
-  page_title: ''
+  page_title: 'Search Portland.gov'
   storage_type: page_manager
   storage_id: frontpage-panels_variant-0
   builder: standard
