POWR-911 update panel config, top search view, styles

--- a/web/sites/default/config/block.block.cloudy_page_title.yml
+++ b/web/sites/default/config/block.block.cloudy_page_title.yml
@@ -22,6 +22,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: '/entity-browser/*'
+    pages: "/entity-browser/*\r\n<front>"
     negate: true
     context_mapping: {  }
