--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -50,11 +50,11 @@ display:
         type: html_list
         options:
           grouping: {  }
-          row_class: 'd-inline-block pt-0'
+          row_class: 'col-lg-6 col-xs-12 top-search'
           default_row_class: false
           type: ul
-          wrapper_class: 'item-list text-center mb-5'
-          class: ''
+          wrapper_class: 'col-12 container'
+          class: 'list-unstyled row'
       row:
         type: fields
         options:
@@ -84,7 +84,7 @@ display:
             trim_whitespace: false
             alt: ''
             rel: ''
-            link_class: 'btn btn-light'
+            link_class: ''
             prefix: ''
             suffix: ''
             target: ''
@@ -413,7 +413,7 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: standard
-      title: 'Top searches'
+      title: Popular
       empty:
         area_text_custom:
           id: area_text_custom
