--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -33,19 +33,19 @@ cloudy_card:
 
 # Homepage
 cloudy_homepage:
-  label: 'Cloudy homepage'
-  category: 'Cloudy'
+  label: Cloudy homepage
+  category: Cloudy
   template: templates/layout/cloudy-homepage
   regions:
     search:
-      label: 'Search'
+      label: Search
       classes:
         - search
     popular:
-      label: 'Popular'
+      label: Popular
       classes:
         - popular
     terms:
-      label: 'Terms'
+      label: Terms
       classes:
         - terms
