--- a/web/sites/default/config/views.view.community_actions.yml
+++ b/web/sites/default/config/views.view.community_actions.yml
@@ -7,6 +7,7 @@ dependencies:
     - taxonomy.vocabulary.community_actions
   module:
     - taxonomy
+    - text
     - user
 id: community_actions
 label: 'Homepage: Block: Actions'
@@ -186,6 +187,70 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        description__format:
+          id: description__format
+          table: taxonomy_term_field_data
+          field: description__format
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: taxonomy_term
+          entity_field: description
+          plugin_id: field
         name:
           id: name
           table: taxonomy_term_field_data
@@ -197,7 +262,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<div class=\"list-group h-100 border-0 p-0\">\n  <a href=\"{{ view_taxonomy_term }}\" class=\"list-group-item list-group-item-action flex-column h-100 text-center\">\n    <div class=\"icon\">{{ field_fontawesome_icon }}</div>\n    <div class=\"name\">{{ name }}</div>\n  </a>\n</div>"
+            text: "<div class=\"list-group h-100 border-0 p-0\">\r\n  <a href=\"{{ view_taxonomy_term }}\" class=\"list-group-item list-group-item-action flex-column h-100\">\r\n    <h3 class=\"name h2\">{{ name }}</h3>\r\n    {{ description__format }}\r\n  </a>\r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -336,6 +401,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
+        - extensions
   block_1:
     display_plugin: block
     id: block_1
@@ -397,3 +463,4 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.taxonomy_term.field_fontawesome_icon'
+        - extensions
