POWR-900 update the popular tag output; add popular field to pages, update views and css

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -46,7 +46,7 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: fieldset
       format_settings:
         label: 'Contact Information'
@@ -67,7 +67,7 @@ third_party_settings:
         - field_enable_programs_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 9
+      weight: 10
       format_type: fieldset
       format_settings:
         id: ''
@@ -83,13 +83,12 @@ mode: default
 content:
   field_address:
     weight: 21
-    settings:
-      default_country: US
+    settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
   field_audience:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -169,7 +168,7 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 33
+    weight: 3
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -183,7 +182,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 11
+    weight: 12
     settings:
       size: 60
       placeholder: ''
@@ -192,14 +191,14 @@ content:
     region: content
   field_logo:
     type: image_image
-    weight: 7
+    weight: 8
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
   field_menu_link:
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
@@ -213,7 +212,7 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -238,7 +237,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 8
+    weight: 9
     settings:
       rows: 2
       placeholder: ''
@@ -251,7 +250,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
