--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -44,7 +44,7 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: fieldset
       format_settings:
         label: 'Contact Information'
@@ -64,7 +64,7 @@ third_party_settings:
         - field_enable_programs_menu_item
         - field_enable_projects_menu_item
       parent_name: ''
-      weight: 8
+      weight: 9
       format_type: fieldset
       format_settings:
         id: ''
@@ -80,13 +80,12 @@ mode: default
 content:
   field_address:
     weight: 6
-    settings:
-      default_country: US
+    settings: {  }
     third_party_settings: {  }
     type: address_default
     region: content
   field_audience:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -159,7 +158,7 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 23
+    weight: 2
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -173,7 +172,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -189,13 +188,13 @@ content:
     region: content
     third_party_settings: {  }
   field_menu_link:
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: menu_link_default
     region: content
   field_parent_group:
-    weight: 2
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -217,7 +216,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 5
+    weight: 6
     settings:
       rows: 2
       placeholder: ''
@@ -230,7 +229,7 @@ content:
     region: content
     type: string_textarea
   field_topics:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
