--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -254,6 +254,18 @@ display:
           expose:
             label: Title
           plugin_id: search_api
+        title_1:
+          id: title_1
+          table: search_api_index_services
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
       title: 'City services'
       header:
         result:
