--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
+    - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
     - field.field.node.page.field_reviewer
     - field.field.node.page.field_summary
@@ -29,18 +30,18 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   field_audience:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_body_content:
-    weight: 6
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
@@ -49,7 +50,7 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 4
+    weight: 5
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -63,13 +64,13 @@ content:
     region: content
     third_party_settings: {  }
   field_group:
-    weight: 11
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 8
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -77,13 +78,20 @@ content:
     type: string_textfield
     region: content
   field_page_type:
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
+  field_popular:
+    weight: 1
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_related_content:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -92,7 +100,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 14
+    weight: 15
     settings:
       match_operator: CONTAINS
       size: 60
@@ -101,7 +109,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_summary:
-    weight: 5
+    weight: 6
     settings:
       rows: 2
       placeholder: ''
@@ -114,20 +122,20 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 15
+    weight: 16
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -144,7 +152,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 12
+    weight: 13
     region: content
     settings:
       match_operator: CONTAINS
@@ -152,7 +160,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
