POWR-933 fix the view relationship combine a field.

--- a/web/sites/default/config/views.view.my_content.yml
+++ b/web/sites/default/config/views.view.my_content.yml
@@ -480,73 +480,6 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: field
-        changed:
-          id: changed
-          table: node_field_data
-          field: changed
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Changed
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: timestamp
-          settings:
-            date_format: medium
-            custom_date_format: ''
-            timezone: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: node
-          entity_field: changed
-          plugin_id: field
         revision_uid:
           id: revision_uid
           table: node_revision
@@ -555,7 +488,7 @@ display:
           group_type: group
           admin_label: ''
           label: 'Last changed by'
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -611,6 +544,73 @@ display:
           field_api_classes: false
           entity_type: node
           entity_field: revision_uid
+          plugin_id: field
+        changed:
+          id: changed
+          table: node_field_data
+          field: changed
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Changed
+          exclude: false
+          alter:
+            alter_text: true
+            text: '{{ changed }} by {{ arguments.uid }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: timestamp
+          settings:
+            date_format: short
+            custom_date_format: ''
+            timezone: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: changed
           plugin_id: field
         field_reviewer:
           id: field_reviewer
@@ -981,16 +981,17 @@ display:
           admin_label: 'Content group content'
           required: true
           group_content_plugins:
+            'group_node:alert': 'group_node:alert'
+            'group_node:building': 'group_node:building'
             'group_node:city_service': 'group_node:city_service'
             'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:information': 'group_node:information'
             'group_node:news': 'group_node:news'
             'group_node:notification': 'group_node:notification'
-            'group_node:alert': '0'
-            'group_node:building': '0'
-            'group_node:service_location': '0'
-            'group_node:top_search': '0'
+            'group_node:page': 'group_node:page'
+            'group_node:service_location': 'group_node:service_location'
+            'group_node:top_search': 'group_node:top_search'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
         gid:
@@ -1013,21 +1014,22 @@ display:
           admin_label: 'Group content'
           required: true
           group_content_plugins:
+            'group_node:alert': 'group_node:alert'
+            'group_node:building': 'group_node:building'
             'group_node:city_service': 'group_node:city_service'
             'group_node:event': 'group_node:event'
             'group_node:guide': 'group_node:guide'
             'group_node:information': 'group_node:information'
             'group_node:news': 'group_node:news'
             'group_node:notification': 'group_node:notification'
+            'group_node:page': 'group_node:page'
+            'group_node:service_location': 'group_node:service_location'
+            'group_node:top_search': 'group_node:top_search'
             group_membership: group_membership
             'group_media:audio': '0'
             'group_media:document': '0'
             'group_media:image': '0'
             'group_media:video': '0'
-            'group_node:alert': '0'
-            'group_node:building': '0'
-            'group_node:service_location': '0'
-            'group_node:top_search': '0'
           entity_type: group
           plugin_id: group_to_group_content
         gc__user:
