POWR-909 add some display modes

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.related.yml
@@ -1,9 +1,9 @@
-uuid: 5504d59f-b309-40a5-a216-2e6613650d4b
+uuid: bc4ee4f5-0ed7-456f-ae84-ce132b964325
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.related
     - field.field.node.development_permit.field_architectural_instructions
     - field.field.node.development_permit.field_architectural_plan_require
     - field.field.node.development_permit.field_legacy_path
@@ -20,6 +20,7 @@ dependencies:
     - field.field.node.development_permit.field_summary
     - node.type.development_permit
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -28,15 +29,41 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.development_permit.teaser
+  ds:
+    layout:
+      id: cloudy_card
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - node_title
+        - field_summary
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+id: node.development_permit.related
 targetEntityType: node
 bundle: development_permit
-mode: teaser
+mode: related
 content:
   field_summary:
     type: string
     weight: 1
-    region: content
+    region: first
     label: hidden
     settings:
       link_to_entity: false
