--- a/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.search_result.yml
@@ -1,9 +1,9 @@
-uuid: 5504d59f-b309-40a5-a216-2e6613650d4b
+uuid: 2d5e082b-d9d7-4cea-8762-c61bcef0ea22
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.search_result
     - field.field.node.development_permit.field_architectural_instructions
     - field.field.node.development_permit.field_architectural_plan_require
     - field.field.node.development_permit.field_legacy_path
@@ -28,10 +28,10 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.development_permit.teaser
+id: node.development_permit.search_result
 targetEntityType: node
 bundle: development_permit
-mode: teaser
+mode: search_result
 content:
   field_summary:
     type: string
