--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - entity_browser.browser.media_browser
     - field.field.node.development_permit.field_architectural_instructions
     - field.field.node.development_permit.field_architectural_plan_require
+    - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
     - field.field.node.development_permit.field_optional_documents
@@ -20,9 +21,11 @@ dependencies:
     - field.field.node.development_permit.field_summary
     - node.type.development_permit
   module:
+    - chosen_field
     - content_moderation
     - entity_browser
     - link
+    - maxlength
     - path
     - telephone
     - text
@@ -33,12 +36,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
   field_architectural_instructions:
-    weight: 133
+    weight: 13
     settings:
       rows: 5
       placeholder: ''
@@ -46,14 +49,20 @@ content:
     type: text_textarea
     region: content
   field_architectural_plan_require:
-    weight: 132
+    weight: 12
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_group:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_legacy_path:
-    weight: 134
+    weight: 14
     settings:
       size: 60
       placeholder: ''
@@ -61,7 +70,7 @@ content:
     type: string_textfield
     region: content
   field_online_application_link:
-    weight: 125
+    weight: 1
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -70,7 +79,7 @@ content:
     region: content
   field_optional_documents:
     type: entity_browser_entity_reference
-    weight: 127
+    weight: 7
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -84,14 +93,14 @@ content:
     region: content
     third_party_settings: {  }
   field_phone:
-    weight: 123
+    weight: 3
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
     region: content
   field_phone_help:
-    weight: 124
+    weight: 4
     settings:
       rows: 5
       placeholder: ''
@@ -100,7 +109,7 @@ content:
     region: content
   field_required_documents:
     type: entity_browser_entity_reference
-    weight: 126
+    weight: 6
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -114,7 +123,7 @@ content:
     region: content
     third_party_settings: {  }
   field_service_location:
-    weight: 122
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -123,7 +132,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_site_plan_instructions:
-    weight: 129
+    weight: 9
     settings:
       rows: 5
       placeholder: ''
@@ -131,14 +140,14 @@ content:
     type: text_textarea
     region: content
   field_site_plan_required:
-    weight: 128
+    weight: 8
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_structural_instructions:
-    weight: 131
+    weight: 11
     settings:
       rows: 5
       placeholder: ''
@@ -146,14 +155,14 @@ content:
     type: text_textarea
     region: content
   field_structural_plan_required:
-    weight: 130
+    weight: 10
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_summary:
-    weight: 121
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -162,57 +171,42 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 16
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 15
-    region: content
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 120
-    region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 16
-    region: content
-    third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
-      size: 60
+      size: 78
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: 78
+        maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 17
+    region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
-    region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 19
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  promote: true
+  status: true
+  sticky: true
