--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.development_permit.field_architectural_instructions
     - field.field.node.development_permit.field_architectural_plan_require
+    - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
     - field.field.node.development_permit.field_optional_documents
@@ -20,8 +21,16 @@ dependencies:
     - node.type.development_permit
   module:
     - link
+    - panelizer
+    - telephone
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.development_permit.default
 targetEntityType: node
 bundle: development_permit
@@ -43,6 +52,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_group:
+    weight: 115
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_legacy_path:
     weight: 114
@@ -76,9 +93,10 @@ content:
   field_phone:
     weight: 103
     label: above
-    settings: {  }
+    settings:
+      title: ''
     third_party_settings: {  }
-    type: basic_string
+    type: telephone_link
     region: content
   field_phone_help:
     weight: 104
@@ -148,7 +166,7 @@ content:
     region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
