POWR-909 add some display modes

--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -56,6 +56,12 @@ content:
     third_party_settings: {  }
     type: chosen_select
     region: content
+  field_group:
+    weight: 15
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_legacy_path:
     weight: 15
     settings:
