POWR-892 adding reset buttons to views

--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -3,9 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.teaser
-    - field.storage.media.field_document
-    - field.storage.media.field_summary
     - image.style.thumbnail
     - media.type.audio
     - media.type.document
@@ -51,7 +48,7 @@ display:
         type: basic
         options:
           submit_button: Filter
-          reset_button: false
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
