--- a/web/sites/default/config/views.view.media_library.yml
+++ b/web/sites/default/config/views.view.media_library.yml
@@ -47,7 +47,7 @@ display:
         type: basic
         options:
           submit_button: 'Apply Filters'
-          reset_button: false
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: false
@@ -406,7 +406,15 @@ display:
         - extensions
         - 'config:core.entity_view_display.media.document.thumbnail'
         - extensions
+        - 'config:core.entity_view_display.media.image.banner'
+        - extensions
         - 'config:core.entity_view_display.media.image.embedded'
+        - extensions
+        - 'config:core.entity_view_display.media.image.embedded_100'
+        - extensions
+        - 'config:core.entity_view_display.media.image.embedded_50'
+        - extensions
+        - 'config:core.entity_view_display.media.image.featured'
         - extensions
         - 'config:core.entity_view_display.media.image.thumbnail'
         - extensions
@@ -470,9 +478,17 @@ display:
         - extensions
         - 'config:core.entity_view_display.media.document.thumbnail'
         - extensions
+        - 'config:core.entity_view_display.media.image.banner'
+        - extensions
         - 'config:core.entity_view_display.media.image.default'
         - extensions
         - 'config:core.entity_view_display.media.image.embedded'
+        - extensions
+        - 'config:core.entity_view_display.media.image.embedded_100'
+        - extensions
+        - 'config:core.entity_view_display.media.image.embedded_50'
+        - extensions
+        - 'config:core.entity_view_display.media.image.featured'
         - extensions
         - 'config:core.entity_view_display.media.image.media_library'
         - extensions
@@ -631,9 +647,17 @@ display:
         - extensions
         - 'config:core.entity_view_display.media.document.thumbnail'
         - extensions
+        - 'config:core.entity_view_display.media.image.banner'
+        - extensions
         - 'config:core.entity_view_display.media.image.default'
         - extensions
         - 'config:core.entity_view_display.media.image.embedded'
+        - extensions
+        - 'config:core.entity_view_display.media.image.embedded_100'
+        - extensions
+        - 'config:core.entity_view_display.media.image.embedded_50'
+        - extensions
+        - 'config:core.entity_view_display.media.image.featured'
         - extensions
         - 'config:core.entity_view_display.media.image.media_library'
         - extensions
