POWR-909 remove unnecessary fields.

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.teaser.yml
@@ -4,19 +4,13 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.development_permit.field_architectural_instructions
-    - field.field.node.development_permit.field_architectural_plan_require
+    - field.field.node.development_permit.field_body_content
+    - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
-    - field.field.node.development_permit.field_optional_documents
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
-    - field.field.node.development_permit.field_required_documents
     - field.field.node.development_permit.field_service_location
-    - field.field.node.development_permit.field_site_plan_instructions
-    - field.field.node.development_permit.field_site_plan_required
-    - field.field.node.development_permit.field_structural_instructions
-    - field.field.node.development_permit.field_structural_plan_required
     - field.field.node.development_permit.field_summary
     - node.type.development_permit
   module:
@@ -42,17 +36,11 @@ content:
       link_to_entity: false
     third_party_settings: {  }
 hidden:
-  field_architectural_instructions: true
-  field_architectural_plan_require: true
+  field_body_content: true
+  field_group: true
   field_legacy_path: true
   field_online_application_link: true
-  field_optional_documents: true
   field_phone: true
   field_phone_help: true
-  field_required_documents: true
   field_service_location: true
-  field_site_plan_instructions: true
-  field_site_plan_required: true
-  field_structural_instructions: true
-  field_structural_plan_required: true
   links: true
