--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -3,24 +3,18 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
-    - field.field.node.development_permit.field_architectural_instructions
-    - field.field.node.development_permit.field_architectural_plan_require
+    - entity_browser.browser.service_locations
+    - field.field.node.development_permit.field_body_content
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
-    - field.field.node.development_permit.field_optional_documents
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
-    - field.field.node.development_permit.field_required_documents
     - field.field.node.development_permit.field_service_location
-    - field.field.node.development_permit.field_site_plan_instructions
-    - field.field.node.development_permit.field_site_plan_required
-    - field.field.node.development_permit.field_structural_instructions
-    - field.field.node.development_permit.field_structural_plan_required
     - field.field.node.development_permit.field_summary
     - node.type.development_permit
   module:
+    - allowed_formats
     - chosen_field
     - content_moderation
     - entity_browser
@@ -36,33 +30,34 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 20
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_architectural_instructions:
-    weight: 13
+  field_body_content:
+    weight: 6
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
     type: text_textarea
     region: content
-  field_architectural_plan_require:
-    weight: 12
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
   field_group:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 14
+    weight: 15
     settings:
       size: 60
       placeholder: ''
@@ -77,21 +72,6 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
-  field_optional_documents:
-    type: entity_browser_entity_reference
-    weight: 7
-    settings:
-      entity_browser: media_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: thumbnail
-      open: true
-      field_widget_replace: false
-    region: content
-    third_party_settings: {  }
   field_phone:
     weight: 3
     settings:
@@ -102,82 +82,55 @@ content:
   field_phone_help:
     weight: 4
     settings:
-      rows: 5
+      rows: 2
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     type: text_textarea
     region: content
-  field_required_documents:
-    type: entity_browser_entity_reference
-    weight: 6
-    settings:
-      entity_browser: media_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: thumbnail
-      open: true
-      field_widget_replace: false
-    region: content
-    third_party_settings: {  }
   field_service_location:
     weight: 5
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: service_locations
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      selection_mode: selection_append
+      open: false
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_site_plan_instructions:
-    weight: 9
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
-  field_site_plan_required:
-    weight: 8
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_structural_instructions:
-    weight: 11
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
-  field_structural_plan_required:
-    weight: 10
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
+    type: entity_browser_entity_reference
     region: content
   field_summary:
     weight: 2
     settings:
-      size: 60
+      rows: 2
       placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    third_party_settings:
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
+    type: string_textarea
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 17
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 18
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -194,7 +147,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 17
+    weight: 18
     region: content
     settings:
       match_operator: CONTAINS
@@ -202,7 +155,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 19
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
