--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -3,20 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.development_permit.field_architectural_instructions
-    - field.field.node.development_permit.field_architectural_plan_require
+    - field.field.node.development_permit.field_body_content
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
-    - field.field.node.development_permit.field_optional_documents
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
-    - field.field.node.development_permit.field_required_documents
     - field.field.node.development_permit.field_service_location
-    - field.field.node.development_permit.field_site_plan_instructions
-    - field.field.node.development_permit.field_site_plan_required
-    - field.field.node.development_permit.field_structural_instructions
-    - field.field.node.development_permit.field_structural_plan_required
     - field.field.node.development_permit.field_summary
     - node.type.development_permit
   module:
@@ -36,42 +29,16 @@ targetEntityType: node
 bundle: development_permit
 mode: default
 content:
-  field_architectural_instructions:
-    weight: 113
-    label: above
+  field_body_content:
+    weight: 5
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_architectural_plan_require:
-    weight: 112
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_group:
-    weight: 115
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_legacy_path:
-    weight: 114
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_online_application_link:
-    weight: 105
-    label: above
+    weight: 1
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -81,92 +48,38 @@ content:
     third_party_settings: {  }
     type: link
     region: content
-  field_optional_documents:
-    type: entity_reference_entity_view
-    weight: 107
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    region: content
   field_phone:
-    weight: 103
-    label: above
+    weight: 3
+    label: hidden
     settings:
       title: ''
     third_party_settings: {  }
     type: telephone_link
     region: content
   field_phone_help:
-    weight: 104
-    label: above
+    weight: 4
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_required_documents:
-    type: entity_reference_entity_view
-    weight: 106
-    label: above
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    region: content
   field_service_location:
-    weight: 102
-    label: above
+    weight: 2
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_site_plan_instructions:
-    weight: 109
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  field_site_plan_required:
-    weight: 108
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_structural_instructions:
-    weight: 111
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  field_structural_plan_required:
-    weight: 110
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
   field_summary:
-    weight: 101
-    label: above
+    weight: 0
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  links:
-    weight: 100
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_group: true
+  field_legacy_path: true
+  links: true
