POWR-909 output service location as a teaser

--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.development_permit.field_summary
     - node.type.development_permit
   module:
+    - ds
     - link
     - panelizer
     - telephone
@@ -67,9 +68,17 @@ content:
     weight: 2
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_summary:
     weight: 0
