--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -99,13 +99,14 @@ content:
     weight: 5
     settings:
       entity_browser: service_locations
-      field_widget_display: label
+      field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
       field_widget_replace: true
       selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
       open: false
-      field_widget_display_settings: {  }
     third_party_settings: {  }
     type: entity_browser_entity_reference
     region: content
