POWR-909 add taxonomy fields

--- a/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.development_permit.default.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - entity_browser.browser.service_locations
     - field.field.node.development_permit.field_body_content
+    - field.field.node.development_permit.field_community_actions
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
+    - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
     - field.field.node.development_permit.field_service_location
@@ -30,12 +32,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 21
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   field_body_content:
-    weight: 6
+    weight: 8
     settings:
       rows: 5
       placeholder: ''
@@ -50,14 +52,20 @@ content:
         hide_guidelines: '0'
     type: text_textarea
     region: content
+  field_community_actions:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_group:
-    weight: 16
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 15
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -65,22 +73,28 @@ content:
     type: string_textfield
     region: content
   field_online_application_link:
-    weight: 1
+    weight: 4
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
     region: content
+  field_permit_type:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_phone:
-    weight: 3
+    weight: 5
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: telephone_default
     region: content
   field_phone_help:
-    weight: 4
+    weight: 6
     settings:
       rows: 2
       placeholder: ''
@@ -96,7 +110,7 @@ content:
     type: text_textarea
     region: content
   field_service_location:
-    weight: 5
+    weight: 7
     settings:
       entity_browser: service_locations
       field_widget_display: rendered_entity
@@ -111,7 +125,7 @@ content:
     type: entity_browser_entity_reference
     region: content
   field_summary:
-    weight: 2
+    weight: 1
     settings:
       rows: 2
       placeholder: ''
@@ -125,13 +139,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 17
+    weight: 11
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 19
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -148,7 +162,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 18
+    weight: 12
     region: content
     settings:
       match_operator: CONTAINS
@@ -156,7 +170,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 20
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
