--- a/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.development_permit.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.development_permit.field_body_content
+    - field.field.node.development_permit.field_community_actions
     - field.field.node.development_permit.field_group
     - field.field.node.development_permit.field_legacy_path
     - field.field.node.development_permit.field_online_application_link
+    - field.field.node.development_permit.field_permit_type
     - field.field.node.development_permit.field_phone
     - field.field.node.development_permit.field_phone_help
     - field.field.node.development_permit.field_service_location
@@ -49,6 +51,14 @@ content:
     third_party_settings: {  }
     type: link
     region: content
+  field_permit_type:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_phone:
     weight: 3
     label: hidden
@@ -89,6 +99,7 @@ content:
     type: string
     region: content
 hidden:
+  field_community_actions: true
   field_group: true
   field_legacy_path: true
   links: true
