--- a/web/sites/default/config/field.storage.node.field_permit_type.yml
+++ b/web/sites/default/config/field.storage.node.field_permit_type.yml
@@ -1,4 +1,4 @@
-uuid: bedef178-3502-4757-a2c8-a25b6a4b5389
+uuid: 8e33e546-0ec7-4ddd-85d7-5feb60c6bca0
 langcode: en
 status: true
 dependencies:
@@ -9,8 +9,8 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_community_actions
-field_name: field_community_actions
+id: node.field_permit_type
+field_name: field_permit_type
 entity_type: node
 type: entity_reference
 settings:
